--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,11 @@ code {
   font-size: 15px;
   border: 1px solid #e8e8e8;
   border-radius: 3px;
-  background-color: #eef; }
+  /*background-color: #eef;*/ 
+  /*background-color: #300a24;*/
+  background-color: #000000; 
+  color: white;
+}
 
 code {
   padding: 1px 5px; }
