--- a/css/clingo.css
+++ b/css/clingo.css
@@ -4,8 +4,9 @@
   text-align:left;
 }
 #input {
-  background-color: #300a24;
-  color: white;
+  /*background-color: #300a24;
+  color: white;*/
+  background-color: #eef;
   margin: 10px auto;
   text-align:left;
   font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
